troubleshoot comment layout issues

--- a/src/sass/movieinfostyle.sass
+++ b/src/sass/movieinfostyle.sass
@@ -1026,6 +1026,7 @@ figure
       left: 60px
       right: -20px
   +respond-to($d-container-width)
+    width: 475px
     margin:
       top: 10px
       left: -25px
